Added section about the profile definition.

--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -94,6 +94,8 @@ Two business partners willing to engage in an electronic collaboration first agr
 
 \section{UML Profile Definition}
 
+In order to support the modeling of UMM and UPCC within EA we created a so called Model Driven Generation (MDG) technology. A MDG technology is a set of collected resources, such as UML profiles, UML patterns, or code templates, bundled into an XML file. The UMM technology file is stored online\footnote{http://umm-dev.org/umm2/umm2.xml} and will be loaded dynamically to EA on startup. Dynamic loading provides a suitable solution in order to keep the technology automatically up to the most recent version. Additionally we added proprietary features which are supported by EA, such as toolbox and diagram profiles, model templates, and quicklinks. The first two features support the use of custom element and diagram types in order to provide a development environment which is shaped to the specifics of UMM and UPCC. The most innovative and handy feature are \textit{Qicklinkers}. Quicklinks are an excellent tool for rapid modeling since they provide a context driven creation of new elements and relationships. 
+
 \section{Semi-automatic artifact generation}
 
 \section{XML schema generation}
