added "semi-automatic artifact generation" section

--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -78,9 +78,9 @@ Our tool provides a set of powerful features for core components such as model v
 
 \section{Introduction}
 
-Before two business partners can engage in an automated B2B interaction two agreements have to be made. First, the process choreography has to be specified i.e. the exact exchange order of the different business documents. Second, the business information being exchanged in the electronic transaction must be specified i.e. the business document definition. In a joint effort between the Vienna University of Technology and the Research Studios Austria, Studio Inter-Organisational Systems we have developed the VIENNA Add-In \cite{man:VIENNAAddIn}. The Add-In is built on top of the UML modeling tool Enterprise Architect \footnote{http://www.sparxsystems.com.au}.
+Before two business partners can engage in an automated B2B interaction two agreements have to be made. First, the process choreography has to be specified i.e. the exact exchange order of the different business documents. Second, the business information being exchanged in the electronic transaction must be specified i.e. the business document definition. In a joint effort between the Vienna University of Technology and the Research Studios Austria, Studio Inter-Organisational Systems we have developed the VIENNA Add-In \cite{man:VIENNAAddIn}. The Add-In is built on top of the UML modeling tool Enterprise Architect (EA) \footnote{http://www.sparxsystems.com.au}.
 
-The VIENNA Add-In currently supports both, business choreography definitions and business document definitions. For the former the supported technology is UN/CEFACT's Modeling Methodology (UMM) \cite{man:umm2} and for the latter the UML Profile for UN/CEFACT's Core Components (UPCC) \cite{man:upcc}. Our tool demonstration will in particular focus on the business documents specific features. 
+The VIENNA Add-In currently supports both, business choreography definitions and business document definitions. For the former the supported technology is UN/CEFACT's Modeling Methodology (UMM) \cite{man:umm2} and for the latter the UML Profile for UN/CEFACT's Core Components (UPCC) \cite{man:upcc}. Our tool demonstration will in particular focus on the business document specific features. 
 
 Figure \ref{fig:viennaaddinoverview} gives a brief overview of the main approach pursued by the VIENNA Add-In. 
 \begin{figure}
@@ -89,7 +89,7 @@ Figure \ref{fig:viennaaddinoverview} gives a brief overview of the main approach
  \caption{VIENNA Add-In overview}
  \label{fig:viennaaddinoverview}
 \end{figure}
-Two business partners willing to engage in an electronic collaboration first agree on a common UMM model specifying the business choreography and a common UPCC model specifying the exchanged business information ((1) in Figure \ref{fig:viennaaddinoverview}). Both models are specified on a conceptual level using the Unified Modeling Language (UML). In a consecutive step the commonly agreed upon process and information model is used to derive deployment artifacts for the IT systems (2). Interface definitions and the exchanged information is reflected using WSDL and XML Schema artifacts. The local choreography definitions are reflected using BPEL artifacts. Eventually the generated artifacts can be deployed to Business Service Interfaces (3). After adding service bindings (4) automatic B2B interactions are feasible (5). Thus, the business modeler is provided with a model driven approach for the definition of deployment artifacts for a service oriented systems.
+Two business partners willing to engage in an electronic collaboration first agree on a common UMM model specifying the business choreography and a common UPCC model specifying the exchanged business information ((1) in Figure \ref{fig:viennaaddinoverview}). Both models are specified on a conceptual level using the Unified Modeling Language (UML). In a consecutive step the commonly agreed upon process and information model is used to derive deployment artifacts for the IT systems (2). Interface definitions and the exchanged information is reflected using WSDL and XML Schema artifacts. The local choreography definitions are reflected using BPEL artifacts. Eventually the generated artifacts can be deployed to Business Service Interfaces (3). After adding service bindings (4) automatic B2B interactions are feasible (5). Thus, the business modeler is provided with a model driven approach for the definition of deployment artifacts for service oriented systems.
 
 
 \section{UML Profile Definition}
@@ -97,6 +97,14 @@ Two business partners willing to engage in an electronic collaboration first agr
 In order to support the modeling of UMM and UPCC within EA we created a so called Model Driven Generation (MDG) technology. A MDG technology is a set of collected resources, such as UML profiles, UML patterns, or code templates, bundled into an XML file. The UMM technology file is stored online\footnote{http://umm-dev.org/umm2/umm2.xml} and will be loaded dynamically to EA on startup. Dynamic loading provides a suitable solution in order to keep the technology automatically up to the most recent version. Additionally we added proprietary features which are supported by EA, such as toolbox and diagram profiles, model templates, and quicklinks. The first two features support the use of custom element and diagram types in order to provide a development environment which is shaped to the specifics of UMM and UPCC. The most innovative and handy feature are \textit{Qicklinkers}. Quicklinks are an excellent tool for rapid modeling since they provide a context driven creation of new elements and relationships. 
 
 \section{Semi-automatic artifact generation}
+
+Having the necessary MDG technologies available in EA allows business document modeling on a conceptual level. The typical approach to model business documents involves three steps. Firstly, different artifacts including enumeration types (ENUMs), primitive types (PRIMs), core data types (CDTs), and aggregated core components (ACCs) are modeled on the core component level. All artifacts modeled on the core component level represent domain-independant, re-usable, building blocks for business document modeling. Secondly, domain-specific artifacts, including business data types (BDTs) and aggregated business information entitites (ABIEs) are created on the business information entity level. The artifacts on the business information entity level are created by derivation from the artifacts on the core components level by restriction. 
+
+Especially deriving artifacts on the business information entity level involves simple but quite a number of modeling tasks. Therefore, we implemented a number of wizards supporting the user in performing complex modeling tasks. At the moment these features include a wizard for creating and editing ABIEs, as well as a wizard for creating BDTs, and a wizard guiding the user through the process of generating XML Schema artifacts representing the business documents modeled. The generation of XML Schema artifacts is described in more detail in the following. 
+
+%abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg.
+%
+%abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg.
 
 \section{XML schema generation}
 
