revised "semi-automatic artifact generation" section

--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -98,9 +98,9 @@ In order to support the modeling of UMM and UPCC within EA we created a so calle
 
 \section{Semi-automatic artifact generation}
 
-Having the necessary MDG technologies available in EA allows business document modeling on a conceptual level. The typical approach to model business documents involves three steps. Firstly, different artifacts including enumeration types (ENUMs), primitive types (PRIMs), core data types (CDTs), and aggregated core components (ACCs) are modeled on the core component level. All artifacts modeled on the core component level represent domain-independant, re-usable, building blocks for business document modeling. Secondly, domain-specific artifacts, including business data types (BDTs) and aggregated business information entitites (ABIEs) are created on the business information entity level. The artifacts on the business information entity level are created by derivation from the artifacts on the core components level by restriction. 
+Having the necessary MDG technologies available in EA allows business document modeling on a conceptual level. The typical approach to model business documents involves three steps. First, different artifacts including enumeration types (ENUMs), primitive types (PRIMs), core data types (CDTs), and aggregated core components (ACCs) are modeled on the core component level. All artifacts modeled on the core component level represent domain-independent, re-usable, building blocks for business document modeling. Second, domain-specific artifacts, including business data types (BDTs) and aggregated business information entitites (ABIEs) are created on the business information entity level. The artifacts on the business information entity level are created through derivation by restriction from the artifacts on the core components level. 
 
-Especially deriving artifacts on the business information entity level involves simple but quite a number of modeling tasks. Therefore, we implemented a number of wizards supporting the user in performing complex modeling tasks. At the moment these features include a wizard for creating and editing ABIEs, as well as a wizard for creating BDTs, and a wizard guiding the user through the process of generating XML Schema artifacts representing the business documents modeled. The generation of XML Schema artifacts is described in more detail in the following. 
+Especially deriving artifacts on the business information entity level involves simple but repetitive modeling tasks. Therefore, we implemented a set of wizards supporting the user in performing complex modeling tasks. At the moment these features include a wizard for creating and editing ABIEs, as well as a wizard for creating BDTs, and a wizard guiding the user through the process of generating XML Schema artifacts representing the business documents modeled. The generation of XML Schema artifacts is described in more detail in the following. 
 
 %abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg.
 %
