--- a/publications/DocEng09/references.bib
+++ b/publications/DocEng09/references.bib
@@ -251,3 +251,10 @@
   timestamp = {2009.04.28}
 }
 
+@MANUAL{CEFACT:NDR,
+  title = {{XML Naming and Design Rules 3.0, ODP5}},
+  author = {UN/CEFACT},
+  organization = {United Nations Center for Trade Facilitation and Electronic Business},
+  year = {2008},
+  publisher = {UN/CEFACT}
+}
