--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -78,7 +78,7 @@ Our tool provides a set of powerful features for core components such as model v
 
 \section{Introduction}
 
-Before two business partners can engage in an automated B2B interaction two agreements have to be made. First, the process choreography has to be specified i.e. the exact exchange order of the different business documents. Second, the business information being exchanged in the electronic transaction must be specified i.e. the business document definition. In a joint effort between the Vienna University of Technology and the Research Studios Austria, Studio Inter-Organisational Systems we have developed the VIENNA Add-In \cite{man:VIENNAAddIn}. The Add-In is built on top of the UML modeling tool Enterprise Architect (EA) \footnote{http://www.sparxsystems.com.au}.
+Before two business partners can engage in an automated Business-to-Business (B2B) interaction two agreements have to be made. First, the process choreography has to be specified i.e. the exact exchange order of the different business documents. Second, the business information being exchanged in the electronic transaction must be specified i.e. the business document definition. In a joint effort between the Vienna University of Technology\footnote{http://www.tuwien.ac.at} and the Research Studios Austria, Studio Inter-Organisational Systems\footnote{http://ios.researchstudio.at/}, we have developed the VIENNA Add-In \cite{man:VIENNAAddIn}. The Add-In is built on top of the UML modeling tool Enterprise Architect (EA) \footnote{http://www.sparxsystems.com.au}.
 
 The VIENNA Add-In currently supports both, business choreography definitions and business document definitions. For the former the supported technology is UN/CEFACT's Modeling Methodology (UMM) \cite{man:umm2} and for the latter the UML Profile for UN/CEFACT's Core Components (UPCC) \cite{man:upcc}. Our tool demonstration will in particular focus on the business document specific features. 
 
@@ -89,12 +89,12 @@ Figure \ref{fig:viennaaddinoverview} gives a brief overview of the main approach
  \caption{VIENNA Add-In overview}
  \label{fig:viennaaddinoverview}
 \end{figure}
-Two business partners willing to engage in an electronic collaboration first agree on a common UMM model specifying the business choreography and a common UPCC model specifying the exchanged business information ((1) in Figure \ref{fig:viennaaddinoverview}). Both models are specified on a conceptual level using the Unified Modeling Language (UML). In a consecutive step the commonly agreed upon process and information model is used to derive deployment artifacts for the IT systems (2). Interface definitions and the exchanged information is reflected using WSDL and XML Schema artifacts. The local choreography definitions are reflected using BPEL artifacts. Eventually the generated artifacts can be deployed to Business Service Interfaces (3). After adding service bindings (4) automatic B2B interactions are feasible (5). Thus, the business modeler is provided with a model driven approach for the definition of deployment artifacts for service oriented systems.
+Two business partners willing to engage in an electronic collaboration first agree on a common UMM model specifying the business choreography and a common UPCC model specifying the exchanged business information ((1) in Figure \ref{fig:viennaaddinoverview}). Both models are specified on a conceptual level using the Unified Modeling Language (UML). In a consecutive step the commonly agreed upon process and information model is used to derive deployment artifacts for the IT systems (2). Interface definitions and the exchanged information are reflected using WSDL and XML Schema artifacts. The local choreography definitions are reflected using BPEL artifacts. Eventually the generated artifacts can be deployed to Business Service Interfaces (3). After adding service bindings (4) automatic B2B interactions are feasible (5). Thus, the business modeler is provided with a model driven approach for the definition of deployment artifacts for service oriented systems.
 
 
 \section{UML Profile Definition}
 
-In order to support the modeling of UMM and UPCC within EA we created a so called Model Driven Generation (MDG) technology. A MDG technology is a set of collected resources, such as UML profiles, UML patterns, or code templates, bundled into an XML file. The UMM technology file is stored online\footnote{http://umm-dev.org/umm2/umm2.xml} and will be loaded dynamically to EA on startup. Dynamic loading provides a suitable solution in order to keep the technology automatically up to the most recent version. Additionally we added proprietary features which are supported by EA, such as toolbox and diagram profiles, model templates, and quicklinks. The first two features support the use of custom element and diagram types in order to provide a development environment which is shaped to the specifics of UMM and UPCC. The most innovative and handy feature are \textit{Qicklinkers}. Quicklinks are an excellent tool for rapid modeling since they provide a context driven creation of new elements and relationships. 
+In order to support the modeling of UMM and UPCC within EA we created a so called Model Driven Generation (MDG) technology. A MDG technology is a set of collected resources, such as UML profiles, UML patterns, or code templates, bundled into an XML file. The UMM technology file is stored online\footnote{http://umm-dev.org/umm2/umm2.xml} and will be loaded dynamically in EA on startup. Dynamic loading provides a suitable solution in order to keep the technology automatically up to the most recent version. Additionally we added proprietary features which are supported by EA, such as toolbox and diagram profiles, model templates, and quicklinks. The first two features support the use of custom element and diagram types in order to provide a development environment which is shaped to the specifics of UMM and UPCC. The most innovative and handy feature are \textit{Qicklinkers}. Quicklinks are an excellent tool for rapid modeling since they provide a context driven creation of new elements and relationships. 
 
 \section{Semi-automatic artifact generation}
 
@@ -107,9 +107,9 @@ Especially deriving artifacts on the business information entity level involves 
 %abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg.
 
 \section{XML Schema generation}
-In order to use the CCTS models composed with UPCC in a business process we provide the VIENNA Add-In with an XML Schema generator.  The serialization of the XML Schema files is driven by the general Naming and Design Rules provided by the UN/CEFACT \cite{CEFACT:NDR}. These Naming and Design Rules constitute a mapping between the conceptual model of CCTS and the XML Schema language. By doing so we ensure that CCTS models conforming to these rules are interchangeable across platforms and applications. For every business document to be serialized a bunch of XML Schema files is created reflecting the library structure of a standard UPCC project. For example, for an assembled business document in a DOCLibrary, the whole BIELibraries and BDTLibraries are also serialized as separate files. Following the specification in \cite{CEFACT:NDR} also element annotations containing meaningful documentation are generated from the tagged values of the conceptual model. 
+In order to use the CCTS models composed with UPCC in a business process we provide the VIENNA Add-In with an XML Schema generator.  The serialization of the XML Schema files is driven by the general Naming and Design Rules provided by the UN/CEFACT \cite{CEFACT:NDR}. These Naming and Design Rules constitute a mapping between the conceptual model of CCTS and the XML Schema language. By doing so we ensure that CCTS models conforming to these rules are interchangeable across platforms and applications. For every business document to be serialized a bunch of XML Schema files is created reflecting the library structure of a standard UPCC project. For example, for an assembled business document in a document library (DOCLibrary), the libraries on the business information entity level (BIELibrary and BDTLibrary) are sereialized into separate files as well. Following the specification in \cite{CEFACT:NDR} also element annotations containing meaningful documentation are generated from the tagged values of the conceptual model. 
 
-Until now the VIENNA Add-In supports only generation of XML Schema conforming to CCTS. However, it is desirable to have schema generators for other languages and other syntax, too. The support of new document models that are not based on CCTS involves the mostly manual mapping from a domain model to CCTS. Automation techniques such as matching may be also considered. Also, we work on the implementation of generators for business process deployment artifacts such as BPEL files.
+Until now the VIENNA Add-In supports the generation of XML schemas conforming to CCTS. However, it is desirable to have schema generators for other languages and other syntax, too. The support of new document models that are not based on CCTS mostly involves the manual mapping from a domain model to CCTS. Automation techniques such as matching may be considered as well. Also, we work on the implementation of generators for business process deployment artifacts such as Business Process Executation Language (BPEL) files.
 
 
 %2. outlook what should be supported
