--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -64,50 +64,43 @@ Christian Eis, Martina Hiesinger, Fabian Kromer, Robert Kromer, Andreas Kuntner,
 %What is the problem
 The definition of concise and interoperable business documents has become one of the key issues in today's electronic business transactions. 
 In this paper, we present our tool VIENNA Add-In which supports a business document modeler in creating Core Component compliant business document models using the Unified Modeling Language (UML). The core components standard is maintained by UN/CEFACT (United Nations Center for Trade Facilitation and Electronic Business) and defines reusable building blocks for constructing business documents. 
-Our tool provides a set of powerful features for core components such as model validation, semi-automatic generation of model artifacts, and generation of fully compliant XML schema definitions from a conceptual model representation. Thereby, the VIENNA Add-In helps to shorten development cycles and helps to reduce errors in designing business documents. The overall goal of our tool-based approach for inter-organizational processes is the generation of deployment artifacts for IT systems from conceptual models.
+Our tool provides a set of powerful features for core components such as model validation, semi-automatic generation of model artifacts, and generation of fully compliant XML Schema definitions from a conceptual model representation. Thereby, the VIENNA Add-In helps to shorten development cycles and helps to reduce errors in designing business documents. The overall goal of our tool-based approach for inter-organizational processes is the generation of deployment artifacts for IT systems from conceptual models.
 
 
 \end{abstract}
-
 % A category with the (minimum) three required fields
 \category{H.4}{Information Systems Applications}{Miscellaneous}
-
-
 \terms{Business document modeling, conceptual modeling, XML schema generation}
 
-
 \section{Introduction}
-
-Before two business partners can engage in an automated Business-to-Business (B2B) interaction two agreements have to be made. First, the process choreography has to be specified i.e. the exact exchange order of the different business documents. Second, the business information being exchanged in the electronic transaction must be specified i.e. the business document definition. In a joint effort between the Vienna University of Technology\footnote{http://www.tuwien.ac.at} and the Research Studios Austria, Studio Inter-Organisational Systems\footnote{http://ios.researchstudio.at/}, we have developed the VIENNA Add-In \cite{man:VIENNAAddIn}. The Add-In is built on top of the UML modeling tool Enterprise Architect (EA) \footnote{http://www.sparxsystems.com.au}.
-
-The VIENNA Add-In currently supports both, business choreography definitions and business document definitions. For the former the supported technology is UN/CEFACT's Modeling Methodology (UMM) \cite{man:umm2} and for the latter the UML Profile for UN/CEFACT's Core Components (UPCC) \cite{man:upcc}. Our tool demonstration will in particular focus on the business document specific features. 
-
-Figure \ref{fig:viennaaddinoverview} gives a brief overview of the main approach pursued by the VIENNA Add-In. 
+Before two business partners can engage in an automated Business-to-Business (B2B) interaction two agreements have to be made. First, the process choreography has to be specified, i.e., the exact exchange order of the different business documents. Second, the business information being exchanged in the electronic transaction must be specified, i.e., the business document definition. In a joint effort between the Vienna University of Technology\footnote{http://www.tuwien.ac.at/} and the Research Studios Austria, Studio Inter-Organisational Systems\footnote{http://ios.researchstudio.at/}, we have developed the VIENNA Add-In \cite{man:VIENNAAddIn}. The Add-In is built on top of the UML modeling tool Enterprise Architect (EA) from Sparx Systems. %\footnote{http://www.sparxsystems.com.au}.
 \begin{figure}
  \centering
    \includegraphics[width=0.32\textwidth]{figures/addinoverview.pdf}
  \caption{VIENNA Add-In overview}
  \label{fig:viennaaddinoverview}
 \end{figure}
-Two business partners willing to engage in an electronic collaboration first agree on a common UMM model specifying the business choreography and a common UPCC model specifying the exchanged business information ((1) in Figure \ref{fig:viennaaddinoverview}). Both models are specified on a conceptual level using the Unified Modeling Language (UML). In a consecutive step the commonly agreed upon process and information model is used to derive deployment artifacts for the IT systems (2). Interface definitions and the exchanged information are reflected using WSDL and XML Schema artifacts. The local choreography definitions are reflected using BPEL artifacts. Eventually the generated artifacts can be deployed to Business Service Interfaces (3). After adding service bindings (4) automatic B2B interactions are feasible (5). Thus, the business modeler is provided with a model driven approach for the definition of deployment artifacts for service oriented systems.
+The VIENNA Add-In currently supports both, business choreography definitions and business document definitions. For the former the supported technology is UN/CEFACT's Modeling Methodology (UMM) \cite{man:umm2} and for the latter the UML Profile for UN/CEFACT's Core Components (UPCC) \cite{man:upcc}. Our tool demonstration will in particular focus on the business document specific features. 
+
+Figure \ref{fig:viennaaddinoverview} gives a brief overview of the main approach pursued by the VIENNA Add-In. Two business partners willing to engage in an electronic collaboration first agree on a common UMM model specifying the business choreography and a common UPCC model specifying the exchanged business information (see (1) in Figure \ref{fig:viennaaddinoverview}). Both models are specified on a conceptual level using the Unified Modeling Language (UML). In a consecutive step the commonly agreed upon process and information model is used to derive deployment artifacts for the IT systems (2). Interface definitions and the exchanged information are reflected using WSDL and XML Schema artifacts. The local choreography definitions are reflected using BPEL artifacts. Eventually the generated artifacts can be deployed to Business Service Interfaces (3). After adding service bindings (4) automatic B2B interactions are feasible (5). Thus, the business modeler is provided with a model driven approach for the definition of deployment artifacts for service oriented systems.
 
 
 \section{UML Profile Definition}
+%In order to support the modeling of UMM and UPCC within EA we utilized a so-called Model Driven Generation (MDG) technology. An MDG technology is a set of collected resources, such as UML profiles, UML patterns, and code templates, bundled into an XML file. 
+Within EA users may extend the standard UML modeling features through utilizing so-called Model Driven Generation (MDG) technologies which are an EA specific extension mechanism. An MDG technology is a set of collected resources, such as UML profiles, UML patterns, and code templates, bundled into an XML file.
 
-In order to support the modeling of UMM and UPCC within EA we created a so called Model Driven Generation (MDG) technology. A MDG technology is a set of collected resources, such as UML profiles, UML patterns, or code templates, bundled into an XML file. The UMM technology file is stored online\footnote{http://umm-dev.org/umm2/umm2.xml} and will be loaded dynamically in EA on startup. Dynamic loading provides a suitable solution in order to keep the technology automatically up to the most recent version. Additionally we added proprietary features which are supported by EA, such as toolbox and diagram profiles, model templates, and quicklinks. The first two features support the use of custom element and diagram types in order to provide a development environment which is shaped to the specifics of UMM and UPCC. The most innovative and handy feature are \textit{Qicklinkers}. Quicklinks are an excellent tool for rapid modeling since they provide a context driven creation of new elements and relationships. 
+Therefore we created MDG technologies for UMM and UPCC in order to support business process modeling and business document modeling in the commonly used modeling environment, Enterprise Architect. Both MDG technology files are stored online\footnote{UMM: http://www.umm-dev.org/ea/umm2.xml\\UPCC:\; http://www.umm-dev.org/ea/upcc3.xml}. After successful configuration of EA these MDG technologies will be loaded dynamically during every EA startup. Dynamic loading provides a suitable solution in order to keep the technology automatically up to the most recent version. 
+
+Additionally, we added proprietary features which are supported by EA, such as toolbox and diagram profiles, model templates, and quicklinks. The first two features support the use of custom element and diagram types in order to provide a development environment, which is shaped to the specifics of UMM and UPCC. The most innovative and handy feature are \textit{Quick Linkers}. Quick Linkers are an excellent tool for rapid modeling since they provide a context driven creation of new elements and relationships. 
 
 \section{Semi-automatic artifact generation}
 
 Having the necessary MDG technologies available in EA allows business document modeling on a conceptual level. The typical approach to model business documents involves three steps. First, different artifacts including enumeration types (ENUMs), primitive types (PRIMs), core data types (CDTs), and aggregated core components (ACCs) are modeled on the core component level. All artifacts modeled on the core component level represent domain-independent, re-usable, building blocks for business document modeling. Second, domain-specific artifacts, including business data types (BDTs) and aggregated business information entitites (ABIEs) are created on the business information entity level. The artifacts on the business information entity level are created through derivation by restriction from the artifacts on the core components level. 
 
-Especially deriving artifacts on the business information entity level involves simple but repetitive modeling tasks. Therefore, we implemented a set of wizards supporting the user in performing complex modeling tasks. At the moment these features include a wizard for creating and editing ABIEs, as well as a wizard for creating BDTs, and a wizard guiding the user through the process of generating XML Schema artifacts representing the business documents modeled. The generation of XML Schema artifacts is described in more detail in the following. 
-
-%abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg.
-%
-%abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg abcdefg.
+Especially deriving artifacts on the business information entity level involves simple but repetitive modeling tasks. Therefore, we implemented a set of wizards supporting the user in performing complex modeling tasks. At the moment, these features include a wizard for creating the default library structure as specified in the UPCC, a wizard for importing standard CC libraries published by UN/CEFACT, a wizard for creating and editing ABIEs, as well as a wizard for creating BDTs, and a wizard guiding the user through the process of generating XML Schema artifacts representing the business documents modeled. The generation of XML Schema artifacts is described in more detail in the following. 
 
 \section{XML Schema generation}
-In order to use the CCTS models composed with UPCC in a business process we provide the VIENNA Add-In with an XML Schema generator.  The serialization of the XML Schema files is driven by the general Naming and Design Rules provided by the UN/CEFACT \cite{CEFACT:NDR}. These Naming and Design Rules constitute a mapping between the conceptual model of CCTS and the XML Schema language. By doing so we ensure that CCTS models conforming to these rules are interchangeable across platforms and applications. For every business document to be serialized a bunch of XML Schema files is created reflecting the library structure of a standard UPCC project. For example, for an assembled business document in a document library (DOCLibrary), the libraries on the business information entity level (BIELibrary and BDTLibrary) are sereialized into separate files as well. Following the specification in \cite{CEFACT:NDR} also element annotations containing meaningful documentation are generated from the tagged values of the conceptual model. 
+In order to use the CCTS models composed with UPCC in a business process we provide the VIENNA Add-In with an XML Schema generator. The serialization of the XML Schema files is driven by the general Naming and Design Rules provided by the UN/CEFACT \cite{CEFACT:NDR}. These Naming and Design Rules constitute a mapping between the conceptual model of CCTS and the XML Schema language. By doing so we ensure that CCTS models conforming to these rules are interchangeable across platforms and applications. For every business document to be serialized a bunch of XML Schema files is created reflecting the library structure of a standard UPCC project. For example, for an assembled business document in a document library (DOCLibrary), the libraries on the business information entity level (BIELibrary and BDTLibrary) are sereialized into separate files as well. Following the specification in \cite{CEFACT:NDR} also element annotations containing meaningful documentation are generated from the tagged values of the conceptual model. 
 
 Until now the VIENNA Add-In supports the generation of XML schemas conforming to CCTS. However, it is desirable to have schema generators for other languages and other syntax, too. The support of new document models that are not based on CCTS mostly involves the manual mapping from a domain model to CCTS. Automation techniques such as matching may be considered as well. Also, we work on the implementation of generators for business process deployment artifacts such as Business Process Executation Language (BPEL) files.
 
