revised paper (MS and CP)

--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -80,10 +80,11 @@ Before two business partners can engage in an automated Business-to-Business (B2
  \caption{VIENNA Add-In overview}
  \label{fig:viennaaddinoverview}
 \end{figure}
-The VIENNA Add-In currently supports both, business choreography definitions and business document definitions. For the former the supported technology is UN/CEFACT's Modeling Methodology (UMM) \cite{man:umm2} and for the latter the UML Profile for UN/CEFACT's Core Components (UPCC) \cite{man:upcc}. Our tool demonstration will in particular focus on the business document specific features. 
+The VIENNA Add-In currently supports both, business choreography definitions and business document definitions. For the former the supported technology is UN/CEFACT's Modeling Methodology (UMM) \cite{man:umm2} and for the latter the UML Profile for UN/CEFACT's Core Components (UPCC) \cite{man:upcc}. 
 
-Figure \ref{fig:viennaaddinoverview} gives a brief overview of the main approach pursued by the VIENNA Add-In. Two business partners willing to engage in an electronic collaboration first agree on a common UMM model specifying the business choreography and a common UPCC model specifying the exchanged business information (see (1) in Figure \ref{fig:viennaaddinoverview}). Both models are specified on a conceptual level using the Unified Modeling Language (UML). In a consecutive step the commonly agreed upon process and information model is used to derive deployment artifacts for the IT systems (2). Interface definitions and the exchanged information are reflected using WSDL and XML Schema artifacts. The local choreography definitions are reflected using BPEL artifacts. Eventually the generated artifacts can be deployed to Business Service Interfaces (3). After adding service bindings (4) automatic B2B interactions are feasible (5). Thus, the business modeler is provided with a model driven approach for the definition of deployment artifacts for service oriented systems.
+Figure \ref{fig:viennaaddinoverview} gives a brief overview of the main approach pursued by the VIENNA Add-In. Two business partners willing to engage in an electronic collaboration first agree on a common UMM model specifying the business choreography and a common UPCC model specifying the exchanged business information (see (1) in Figure \ref{fig:viennaaddinoverview}). Both models are specified on a conceptual level using the Unified Modeling Language (UML). In a consecutive step the commonly agreed upon process and information model is used to derive deployment artifacts for the IT systems (2). Interface definitions and the exchanged information are reflected using WSDL and XML Schema artifacts. The local choreography definitions are reflected using BPEL artifacts. Eventually the generated artifacts can be deployed to Business Service Interfaces (3). After adding service bindings (4) automatic B2B interactions are feasible (5). Thus, the business modeler is provided with a model driven approach for the definition of deployment artifacts for service oriented systems. 
 
+However, in our tool demonstration we will in particular focus on the business document specific features. 
 
 \section{UML Profile Definition}
 %In order to support the modeling of UMM and UPCC within EA we utilized a so-called Model Driven Generation (MDG) technology. An MDG technology is a set of collected resources, such as UML profiles, UML patterns, and code templates, bundled into an XML file. 
@@ -100,7 +101,7 @@ Having the necessary MDG technologies available in EA allows business document m
 Especially deriving artifacts on the business information entity level involves simple but repetitive modeling tasks. Therefore, we implemented a set of wizards supporting the user in performing complex modeling tasks. At the moment, these features include a wizard for creating the default library structure as specified in the UPCC, a wizard for importing standard CC libraries published by UN/CEFACT, a wizard for creating and editing ABIEs, as well as a wizard for creating BDTs, and a wizard guiding the user through the process of generating XML Schema artifacts representing the business documents modeled. The generation of XML Schema artifacts is described in more detail in the following. 
 
 \section{XML Schema generation}
-In order to use the CCTS models composed with UPCC in a business process we provide the VIENNA Add-In with an XML Schema generator. The serialization of the XML Schema files is driven by the general Naming and Design Rules provided by the UN/CEFACT \cite{CEFACT:NDR}. These Naming and Design Rules constitute a mapping between the conceptual model of CCTS and the XML Schema language. By doing so we ensure that CCTS models conforming to these rules are interchangeable across platforms and applications. For every business document to be serialized a bunch of XML Schema files is created reflecting the library structure of a standard UPCC project. For example, for an assembled business document in a document library (DOCLibrary), the libraries on the business information entity level (BIELibrary and BDTLibrary) are sereialized into separate files as well. Following the specification in \cite{CEFACT:NDR} also element annotations containing meaningful documentation are generated from the tagged values of the conceptual model. 
+In order to use the CCTS models composed with UPCC in a business process we provide the VIENNA Add-In with an XML Schema generator. The serialization of the XML Schema files is driven by the general Naming and Design Rules provided by the UN/CEFACT \cite{CEFACT:NDR}. These Naming and Design Rules constitute a mapping between the conceptual model of CCTS and the XML Schema language. By doing so we ensure that CCTS models conforming to these rules are interchangeable across platforms and applications. For every business document to be serialized a bunch of XML Schema files is created reflecting the library structure of a standard UPCC model. For example, for an assembled business document in a document library (DOCLibrary), the libraries on the business information entity level (BIELibrary and BDTLibrary) are sereialized into separate files as well. Following the specification in \cite{CEFACT:NDR} also element annotations containing meaningful documentation are generated from the tagged values of the conceptual model. 
 
 Until now the VIENNA Add-In supports the generation of XML schemas conforming to CCTS. However, it is desirable to have schema generators for other languages and other syntax, too. The support of new document models that are not based on CCTS mostly involves the manual mapping from a domain model to CCTS. Automation techniques such as matching may be considered as well. Also, we work on the implementation of generators for business process deployment artifacts such as Business Process Executation Language (BPEL) files.
 
