--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -46,7 +46,7 @@ Christian Eis, Martina Hiesinger, Fabian Kromer, Robert Kromer, Andreas Kuntner,
        \affaddr{Research Studios Austria}\\
        \affaddr{Thurngasse 8/3/20}\\
        \affaddr{1090 Vienna, Austria}\\
-       \email{office.ios@researchstudio.at}       
+       \email{\{firstname.lastname\}@researchstudio.at}       
 % 2nd. author
 %\alignauthor
 %Christian Pichler\\
@@ -101,7 +101,7 @@ Having the necessary MDG technologies available in EA allows business document m
 Especially deriving artifacts on the business information entity level involves simple but repetitive modeling tasks. Therefore, we implemented a set of wizards supporting the user in performing complex modeling tasks. At the moment, these features include a wizard for creating the default library structure as specified in the UPCC, a wizard for importing standard CC libraries published by UN/CEFACT, a wizard for creating and editing ABIEs, as well as a wizard for creating BDTs, and a wizard guiding the user through the process of generating XML Schema artifacts representing the business documents modeled. The generation of XML Schema artifacts is described in more detail in the following. 
 
 \section{XML Schema generation}
-In order to use the CCTS models composed with UPCC in a business process we provide the VIENNA Add-In with an XML Schema generator. The serialization of the XML Schema files is driven by the general Naming and Design Rules provided by the UN/CEFACT \cite{CEFACT:NDR}. These Naming and Design Rules constitute a mapping between the conceptual model of CCTS and the XML Schema language. By doing so we ensure that CCTS models conforming to these rules are interchangeable across platforms and applications. For every business document to be serialized a bunch of XML Schema files is created reflecting the library structure of a standard UPCC model. For example, for an assembled business document in a document library (DOCLibrary), the libraries on the business information entity level (BIELibrary and BDTLibrary) are sereialized into separate files as well. Following the specification in \cite{CEFACT:NDR} also element annotations containing meaningful documentation are generated from the tagged values of the conceptual model. 
+In order to use the CCTS models composed with UPCC in a business process we provide the VIENNA Add-In with an XML Schema generator. The serialization of the XML Schema files is driven by the general Naming and Design Rules provided by the UN/CEFACT \cite{CEFACT:NDR}. These Naming and Design Rules constitute a mapping between the conceptual model of CCTS and the XML Schema language. By doing so we ensure that CCTS models conforming to these rules are interchangeable across platforms and applications. For every business document to be serialized a bunch of XML Schema files is created reflecting the library structure of a standard UPCC model. For example, for an assembled business document in a document library (DOCLibrary), the libraries on the business information entity level (BIELibrary and BDTLibrary) are serialized into separate files as well. Following the specification in \cite{CEFACT:NDR} also element annotations containing meaningful documentation are generated from the tagged values of the conceptual model. 
 
 Until now the VIENNA Add-In supports the generation of XML schemas conforming to CCTS. However, it is desirable to have schema generators for other languages and other syntax, too. The support of new document models that are not based on CCTS mostly involves the manual mapping from a domain model to CCTS. Automation techniques such as matching may be considered as well. Also, we work on the implementation of generators for business process deployment artifacts such as Business Process Executation Language (BPEL) files.
 
