--- a/publications/DocEng09/references.bib
+++ b/publications/DocEng09/references.bib
@@ -253,8 +253,8 @@
 
 @MANUAL{CEFACT:NDR,
   title = {{XML Naming and Design Rules 3.0, ODP5}},
-  author = {UN/CEFACT},
-  organization = {United Nations Center for Trade Facilitation and Electronic Business},
+  organization = {UN/CEFACT},
   year = {2008},
   publisher = {UN/CEFACT}
 }
+
