--- a/publications/DocEng09/references.bib
+++ b/publications/DocEng09/references.bib
@@ -233,14 +233,14 @@
 @MANUAL{man:umm2,
   title = {{UN/CEFACT's Modeling Methodology 2.0}},
   organization = {{UN/CEFACT}},
-  note = {\url{http://www.untmg.org/umm/spec/foundation/2_0}},
+  note = {%\url{http://www.untmg.org/umm/spec/foundation/2_0}},
   timestamp = {2009.04.28}
 }
 
 @MANUAL{man:upcc,
   title = {{UML Profile for Core Components}},
   organization = {{UN/CEFACT}},
-  note = {\url{http://www.untmg.org/upcc/spec/3_0}},
+  note = {%\url{http://www.untmg.org/upcc/spec/3_0}},
   timestamp = {2009.04.28}
 }
 
