--- a/publications/DocEng09/DocEng2009_DemoPaper.tex
+++ b/publications/DocEng09/DocEng2009_DemoPaper.tex
@@ -73,7 +73,7 @@ In this paper, we present our tool VIENNA Add-In supporting a business document 
 
 \section{Introduction}
 Before two business partners can engage in an automated Business-to-Business (B2B) interaction two agreements have to be made. First, the process choreography has to be specified, i.e., the exact exchange order of the different business documents. Second, the business information being exchanged in the electronic transaction must be specified, i.e., the business document definition. In a joint effort between the Vienna University of Technology\footnote{http://www.tuwien.ac.at/} and the Research Studios Austria, Studio Inter-Organisational Systems\footnote{http://ios.researchstudio.at/}, we have developed the VIENNA Add-In \cite{man:VIENNAAddIn}. The Add-In is built on top of the UML modeling tool Enterprise Architect (EA) from Sparx Systems. %\footnote{http://www.sparxsystems.com.au}.
-\begin{figure}
+\begin{figure}[htbp]
  \centering
    \includegraphics[width=0.32\textwidth]{figures/addinoverview.pdf}
  \caption{VIENNA Add-In overview}
